--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,9 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.preference:preference:1.2.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
