--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,13 +27,20 @@
         android:theme="@style/Theme.Jaadu"
         tools:targetApi="31">
         <activity
+            android:name=".about_us"
+            android:exported="false" />
+        <activity
+            android:name=".terms_and_consitions"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-        <activity android:name=".WelcomeActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".WelcomeActivity"
+            android:exported="false" />
         <activity
             android:name=".SettingsActivity"
             android:exported="false"
